--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/lab": "3.0.0-alpha.15",
     "autoprefixer": "7.1.6",
     "autosuggest-highlight": "3.1.1",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -57,10 +58,13 @@
     "react-leaflet": "2.0.1",
     "react-number-format": "3.5.2",
     "react-quill": "1.3.1",
+    "react-redux": "^7.0.2",
     "react-router-dom": "4.3.1",
     "react-select": "2.0.0",
     "react-swipeable-views": "0.12.17",
     "react-text-mask": "5.4.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
