--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-leaflet": "2.0.1",
     "react-number-format": "3.5.2",
     "react-quill": "1.3.1",
-    "react-redux": "^7.0.2",
+    "react-redux": "5.1.1",
     "react-router-dom": "4.3.1",
     "react-select": "2.0.0",
     "react-swipeable-views": "0.12.17",
