--- a/package.json
+++ b/package.json
@@ -2,16 +2,35 @@
   "name": "primer-react",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "concurrently": "4.0.1"
-  },
   "dependencies": {
+    "axios": "^0.18.0",
+    "react": "16.5.1",
+    "react-dom": "16.5.1",
+    "react-autosuggest": "9.4.1",
+    "react-beautiful-dnd": "^9.0.2",
+    "react-big-calendar": "0.19.2",
+    "react-chartjs-2": "2.7.4",
+    "react-dev-utils": "^5.0.2",
+    "react-emotion": "^9.2.8",
+    "react-google-maps": "9.4.5",
+    "react-leaflet": "2.0.1",
+    "react-number-format": "3.5.2",
+    "react-quill": "1.3.1",
+    "react-redux": "5.1.1",
+    "react-router-dom": "4.3.1",
+    "react-select": "2.0.0",
+    "react-swipeable-views": "0.12.17",
+    "react-text-mask": "5.4.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "concurrently": "4.0.1",
     "@material-ui/core": "3.0.3",
     "@material-ui/icons": "3.0.1",
     "@material-ui/lab": "3.0.0-alpha.15",
     "autoprefixer": "7.1.6",
     "autosuggest-highlight": "3.1.1",
-    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -46,25 +65,6 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "16.5.1",
-    "react-autosuggest": "9.4.1",
-    "react-beautiful-dnd": "^9.0.2",
-    "react-big-calendar": "0.19.2",
-    "react-chartjs-2": "2.7.4",
-    "react-dev-utils": "^5.0.2",
-    "react-dom": "16.5.1",
-    "react-emotion": "^9.2.8",
-    "react-google-maps": "9.4.5",
-    "react-leaflet": "2.0.1",
-    "react-number-format": "3.5.2",
-    "react-quill": "1.3.1",
-    "react-redux": "5.1.1",
-    "react-router-dom": "4.3.1",
-    "react-select": "2.0.0",
-    "react-swipeable-views": "0.12.17",
-    "react-text-mask": "5.4.3",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
