--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,4 @@
 REACT_APP_GOOGLE_API_KEY =
 REACT_APP_WEATHER_API_KEY =
 REACT_APP_STOCKS_API_KEY =
+REACT_APP_PORTAL_API = "http://localhost:8005/api/portal"
