--- a/sample.env
+++ b/sample.env
@@ -2,8 +2,8 @@ REACT_APP_GOOGLE_API_KEY =
 REACT_APP_WEATHER_API_KEY =
 REACT_APP_STOCKS_API_KEY =
 REACT_APP_API_PORTAL_PROTOCOL = "http"
-REACT_APP_API_PORTAL_HOST = "103.99.113.122"
+REACT_APP_API_PORTAL_HOST = "localhost"
 REACT_APP_API_PORTAL_PORT = ":8000"
 REACT_APP_API_CLIENT_PROTOCOL = "http"
-REACT_APP_API_CLIENT_HOST = "103.99.113.122"
+REACT_APP_API_CLIENT_HOST = "localhost"
 REACT_APP_API_CLIENT_PORT = ":8000"
