--- a/package.json
+++ b/package.json
@@ -3,48 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.4.3",
-    "@svgr/webpack": "4.1.0",
-    "@typescript-eslint/eslint-plugin": "1.6.0",
-    "@typescript-eslint/parser": "1.6.0",
     "axios": "^0.18.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.5",
-    "babel-plugin-named-asset-import": "^0.3.2",
-    "babel-preset-react-app": "^9.0.0",
-    "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chart.js": "^2.8.0",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-loader": "2.1.2",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.5.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
-    "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
-    "jest": "24.7.1",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.7.1",
-    "jest-watch-typeahead": "0.3.0",
-    "leaflet": "^1.5.1",
-    "mini-css-extract-plugin": "0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.2.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.6.0",
-    "postcss-safe-parser": "4.0.1",
+    "material-ui": "^0.20.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
@@ -55,8 +15,69 @@
     "react-swipeable-views": "^0.13.3",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.1",
+    "resolve": "1.10.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.4.3",
+    "@svgr/webpack": "4.1.0",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
+    "autosuggest-highlight": "^3.1.1",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-preset-react-app": "^9.0.0",
+    "camelcase": "^5.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chart.js": "^2.8.0",
+    "css-loader": "2.1.1",
+    "date-fns": "^1.30.1",
+    "dotenv": "6.2.0",
+    "dotenv-expand": "4.2.0",
+    "downshift": "^3.2.10",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "identity-obj-proxy": "3.0.0",
+    "is-wsl": "^1.1.0",
+    "jest": "24.7.1",
+    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-resolve": "24.7.1",
+    "jest-watch-typeahead": "0.3.0",
+    "jss-rtl": "^0.2.3",
+    "leaflet": "^1.5.1",
+    "mini-css-extract-plugin": "0.5.0",
+    "moment": "^2.24.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "pnp-webpack-plugin": "1.2.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.6.0",
+    "postcss-safe-parser": "4.0.1",
+    "react-autosuggest": "^9.4.3",
+    "react-beautiful-dnd": "^11.0.3",
+    "react-big-calendar": "0.19.2",
+    "react-chartjs-2": "^2.7.6",
+    "react-google-maps": "^9.4.5",
+    "react-jss": "^8.6.1",
+    "react-leaflet": "^2.3.0",
+    "react-number-format": "^4.0.8",
+    "react-quill": "^1.3.3",
     "redux-thunk": "^2.3.0",
-    "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
@@ -137,25 +158,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/lab": "^3.0.0-alpha.30",
-    "autosuggest-highlight": "^3.1.1",
-    "date-fns": "^1.30.1",
-    "downshift": "^3.2.10",
-    "jss-rtl": "^0.2.3",
-    "material-ui": "^0.20.2",
-    "moment": "^2.24.0",
-    "react-autosuggest": "^9.4.3",
-    "react-beautiful-dnd": "^11.0.3",
-    "react-big-calendar": "0.19.2",
-    "react-chartjs-2": "^2.7.6",
-    "react-google-maps": "^9.4.5",
-    "react-jss": "^8.6.1",
-    "react-leaflet": "^2.3.0",
-    "react-number-format": "^4.0.8",
-    "react-quill": "^1.3.3"
   }
 }
