--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
         "jest"
     ],
     "rules": {
-        "indent": ["error", 2, { "SwitchCase": 1 }],
+        "indent": ["warn", 2, {"SwitchCase": 1, "ignoredNodes": ["TemplateLiteral"]}],
         "linebreak-style": ["error", "unix"],
         "quotes": ["error", "single"],
         "semi": ["warn", "never"],
